--- a/.config/vimb/style.css
+++ b/.config/vimb/style.css
@@ -1,16 +1,16 @@
 ._hintLabel {
-    -webkit-transform:translate(-4px,-4px);
-    position: absolute;
-    z-index: 100000;
-    font:bold .8em monospace;
-    color: #000;
-    background-color: #fff;
-    margin: 0;
-    padding: 0px 1px;
-    border: 1px solid #444;
-    border-radius: 3px;
-    opacity: 0.7;
-    -webkit-box-shadow: 1px 1px 3px #444;
+    -webkit-transform:translate(-4px,-4px) !important;
+    position: absolute !important;
+    z-index: 100000 !important;
+    font:bold .8em monospace !important;
+    color: #000 !important;
+    background-color: #fff !important;
+    margin: 0 !important;
+    padding: 0px 1px !important;
+    border: 1px solid #444 !important;
+    border-radius: 3px !important;
+    opacity: 0.7 !important;
+    -webkit-box-shadow: 1px 1px 3px #444 !important;
 }
 ._hintElem {
     background-color: #eee8d5 !important;
@@ -21,6 +21,6 @@
     color: #eee8d5 !important;
 }
 ._hintLabel._hintFocus{
-    z-index: 100001;
-    opacity: 1
+    z-index: 100001 !important;
+    opacity: 1 !important;
 }
