--- a/.config/vimb/style.css
+++ b/.config/vimb/style.css
@@ -24,3 +24,63 @@
     z-index: 100001 !important;
     opacity: 1 !important;
 }
+/* Hint mode color styling
+ * Color scheme: Base16 Eighties (https://github.com/chriskempson/base16)
+ *
+ * The precedence of the user style is lower than that of the website so you
+ * have to mark your style definition to have higher priority.
+ */
+span[vimbhint^='label'] {
+    -webkit-transform:translate(-4px,-4px) !important;
+    position: absolute !important;
+    z-index: 100000 !important;
+    font:bold .8em monospace !important;
+    color: #000 !important;
+    background-color: #fff !important;
+    margin: 0 !important;
+    padding: 0px 1px !important;
+    border: 1px solid #444 !important;
+    border-radius: 3px !important;
+    opacity: 0.7 !important;
+    -webkit-box-shadow: 1px 1px 3px #444 !important;
+}
+span[vimbhint='label focus'] {
+    z-index: 100001 !important;
+    opacity: 1 !important;
+}
+*[vimbhint^='hint'] {
+    background-color: #eee8d5 !important;
+    color: #268bd2 !important
+}
+*[vimbhint='hint focus'] {
+    background-color: #859900 !important;
+    color: #eee8d5 !important;
+}
+
+/*
+*,div,pre,textarea,body,input,td,tr,p {
+    background-color: #303030 !important;
+    background-image: none !important;
+    color: #bbbbbb !important;
+}
+h1,h2,h3,h4 {
+    background-color: #303030 !important;
+    color: #b8ddea !important;
+}
+a {
+    color: #70e070 !important;
+}
+a:hover,a:focus {
+    color: #7070e0 !important;
+}
+a:visited {
+    color: #e07070 !important;
+}
+img {
+    opacity: .5;
+}
+img:hover {
+    opacity: 1;
+}
+*/
+
