--- a/.config/vimb/style.css
+++ b/.config/vimb/style.css
@@ -1,4 +1,12 @@
 /* Hint mode color styling */
+* {
+    color: #002b36;
+    "background-color: #002b36;
+}
+@media (prefers-color-scheme: dark) {
+    background-color: #002b36;
+    color: #839495;
+}
 span[vimbhint^='label'] {
     background-color: #859900 !important;
     border: 1px solid #fdf6e3 !important;
