--- a/.config/vimb/style.css
+++ b/.config/vimb/style.css
@@ -3,10 +3,12 @@ html {
     color: unset;
     background-color: #fdf6e3;
 }
-/*  @media (prefers-color-scheme: dark) {
-    background-color: #002b36;
-    color: #839495;
-} */
+@media (prefers-color-scheme: dark) {
+    html {
+        background-color: #002b36 !important;
+        color: #839495 !important;
+    }
+}
 span[vimbhint^='label'] {
     background-color: #859900 !important;
     border: 1px solid #fdf6e3 !important;
@@ -35,4 +37,9 @@ span[vimbhint='label focus'] {
 
 textarea, input {
   color: #fdf6e3;
+}
+body::-webkit-highlight {
+    background-color: #859900;
+    border: 1px solid #fdf6e3;
+    color: #fdf6e3;
 }
